--- a/src/Views/Preference.xaml
+++ b/src/Views/Preference.xaml
@@ -7,6 +7,7 @@
         xmlns:controls="clr-namespace:SourceGit.Views.Controls"
         xmlns:models="clr-namespace:SourceGit.Models"
         mc:Ignorable="d"
+        UseLayoutRounding="True"
         Title="{StaticResource Text.Preference}"
         Width="500" SizeToContent="Height"
         WindowStartupLocation="CenterOwner"
@@ -18,7 +19,7 @@
     <controls:WindowBorder>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="32"/>
+                <RowDefinition Height="28"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
@@ -41,7 +42,7 @@
                 <controls:IconButton 
                     Grid.Column="3" 
                     Click="Quit"
-                    Padding="9" 
+                    Width="28" Padding="8" 
                     Icon="{StaticResource Icon.Close}" 
                     HoverBackground="Red"
                     WindowChrome.IsHitTestVisibleInChrome="True"/>
