--- a/src/Views/Popups/Revert.xaml
+++ b/src/Views/Popups/Revert.xaml
@@ -5,8 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
-    mc:Ignorable="d" 
-    d:DesignWidth="500" Height="Auto">
+    mc:Ignorable="d"
+    d:DesignWidth="500" Height="Auto" Padding="1">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="32"/>
