--- a/src/Views/Widgets/CommitDetail.xaml
+++ b/src/Views/Widgets/CommitDetail.xaml
@@ -8,7 +8,7 @@
              xmlns:widgets="clr-namespace:SourceGit.Views.Widgets"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">    
-    <TabControl>
+    <TabControl x:Name="body">
         <TabItem Header="{StaticResource Text.CommitViewer.Info}">            
             <Grid>
                 <Grid.RowDefinitions>
@@ -203,6 +203,7 @@
                         <DataGrid.RowStyle>
                             <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource Style.DataGridRow}">
                                 <EventSetter Event="ContextMenuOpening" Handler="OnChangeListContextMenuOpening"/>
+                                <EventSetter Event="MouseDoubleClick" Handler="OnChangeListMouseDoubleClick"/>
                             </Style>
                         </DataGrid.RowStyle>
                         <DataGrid.Columns>
