--- a/src/Views/Popups/Apply.xaml
+++ b/src/Views/Popups/Apply.xaml
@@ -10,7 +10,7 @@
     xmlns:models="clr-namespace:SourceGit.Models"
     xmlns:validations="clr-namespace:SourceGit.Views.Validations"
     mc:Ignorable="d" 
-    d:DesignWidth="800" Height="Auto" Padding="1">
+    d:DesignWidth="800">
     <Grid>
         <Grid.Resources>
             <converters:InverseBool x:Key="InverseBool"/>
