--- a/src/Views/Popups/CreateBranch.xaml
+++ b/src/Views/Popups/CreateBranch.xaml
@@ -9,7 +9,7 @@
     xmlns:converters="clr-namespace:SourceGit.Views.Converters"
     xmlns:validations="clr-namespace:SourceGit.Views.Validations"
     mc:Ignorable="d" 
-    d:DesignWidth="500" Height="Auto" Padding="1">
+    d:DesignWidth="500">
     <Grid>
         <Grid.Resources>
             <converters:InverseBool x:Key="InverseBool"/>
