--- a/src/Views/Popups/Pull.xaml
+++ b/src/Views/Popups/Pull.xaml
@@ -7,7 +7,7 @@
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
     xmlns:converters="clr-namespace:SourceGit.Views.Converters" 
     mc:Ignorable="d" 
-    d:DesignWidth="500" Height="Auto" Padding="1">
+    d:DesignWidth="500">
     <UserControl.Resources>
         <converters:BranchToName x:Key="BranchToName"/>
     </UserControl.Resources>
