feature<GitFlow>: add an option to keep branch after finish

--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -151,6 +151,7 @@
     <sys:String x:Key="Text.GitFlow.PrefixRequired">{0} prefix is required.</sys:String>
     <sys:String x:Key="Text.GitFlow.PrefixInvalid">{0} contains invalid characters.</sys:String>
     <sys:String x:Key="Text.GitFlow.DevSameAsProd">Development branch is same with production!</sys:String>
+    <sys:String x:Key="Text.GitFlow.KeepBranchAfterFinish">Keep branch</sys:String>
 
     <sys:String x:Key="Text.RepoCM.Refresh">Refresh</sys:String>
     <sys:String x:Key="Text.RepoCM.Bookmark">Bookmark</sys:String>
