--- a/src/Views/Widgets/Dashboard.xaml
+++ b/src/Views/Widgets/Dashboard.xaml
@@ -40,34 +40,34 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <Button Click="OpenFetch" Width="72" BorderThickness="0">
+                    <Button Click="OpenFetch" BorderThickness="0">
                         <StackPanel Orientation="Horizontal" Margin="6,0">
-                            <Path Width="16" Height="16" Data="{StaticResource Icon.Fetch}"/>
-                            <Label Content="{StaticResource Text.Fetch}" Margin="4,0,0,0"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Fetch}"/>
+                            <Label Content="{StaticResource Text.Fetch}" Margin="2,0,0,0"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenPull" Width="72" BorderThickness="0">
+                    <Button Click="OpenPull" BorderThickness="0">
                         <StackPanel Orientation="Horizontal" Margin="6,0">
-                            <Path Width="15" Height="15" Data="{StaticResource Icon.Pull}"/>
-                            <Label Content="{StaticResource Text.Pull}" Margin="4,0,0,0"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Pull}"/>
+                            <Label Content="{StaticResource Text.Pull}" Margin="2,0,0,0"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenPush" Width="72" BorderThickness="0">
+                    <Button Click="OpenPush" BorderThickness="0">
                         <StackPanel Orientation="Horizontal" Margin="6,0">
-                            <Path Width="15" Height="15" Data="{StaticResource Icon.Push}"/>
-                            <Label Content="{StaticResource Text.Push}" Margin="4,0,0,0"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Push}"/>
+                            <Label Content="{StaticResource Text.Push}" Margin="2,0,0,0"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenStash" Width="72" BorderThickness="0">
+                    <Button Click="OpenStash" BorderThickness="0">
                         <StackPanel Orientation="Horizontal" Margin="6,0">
                             <Path Width="14" Height="14" Data="{StaticResource Icon.SaveStash}"/>
-                            <Label Content="{StaticResource Text.Stash}" Margin="4,0,0,0"/>
+                            <Label Content="{StaticResource Text.Stash}" Margin="2,0,0,0"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenApply" Width="72" BorderThickness="0">
+                    <Button Click="OpenApply" BorderThickness="0">
                         <StackPanel Orientation="Horizontal" Margin="6,0">
-                            <Path Width="13" Height="13" Margin="0,2,0,0" Data="{StaticResource Icon.Apply}"/>
-                            <Label Content="{StaticResource Text.Apply}" Margin="4,0,0,0"/>
+                            <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icon.Apply}"/>
+                            <Label Content="{StaticResource Text.Apply}" Margin="2,0,0,0"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
