--- a/src/Views/Widgets/Dashboard.xaml
+++ b/src/Views/Widgets/Dashboard.xaml
@@ -24,65 +24,65 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="6,0">
-                    <Button Click="Explore" Margin="4,0,0,0" ToolTip="{StaticResource Text.Dashboard.Explore.Tip}" BorderThickness="0">
+                    <Button Click="Explore" Margin="6,0" ToolTip="{StaticResource Text.Dashboard.Explore.Tip}" BorderThickness="0">
                         <StackPanel Orientation="Horizontal">
-                            <Path Width="16" Height="14" Data="{StaticResource Icon.Folder.Open}"/>
-                            <Label Content="{StaticResource Text.Dashboard.Explore}"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Folder.Open}"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Dashboard.Explore}"/>
                         </StackPanel>
                     </Button>
 
-                    <Button Click="Terminal" Margin="4,0,0,0" ToolTip="{StaticResource Text.Dashboard.Terminal.Tip}" BorderThickness="0">
+                    <Button Click="Terminal" Margin="6,0" ToolTip="{StaticResource Text.Dashboard.Terminal.Tip}" BorderThickness="0">
                         <StackPanel Orientation="Horizontal">
                             <Path Width="13" Height="13" Data="{StaticResource Icon.Terminal}"/>
-                            <Label Content="{StaticResource Text.Dashboard.Terminal}"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Dashboard.Terminal}"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <Button Click="OpenFetch" BorderThickness="0">
-                        <StackPanel Orientation="Horizontal" Margin="6,0">
+                    <Button Click="OpenFetch" Margin="8,0" BorderThickness="0">
+                        <StackPanel Orientation="Horizontal">
                             <Path Width="14" Height="14" Data="{StaticResource Icon.Fetch}"/>
-                            <Label Content="{StaticResource Text.Fetch}" Margin="2,0,0,0"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Fetch}"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenPull" BorderThickness="0">
-                        <StackPanel Orientation="Horizontal" Margin="6,0">
+                    <Button Click="OpenPull" Margin="8,0" BorderThickness="0">
+                        <StackPanel Orientation="Horizontal">
                             <Path Width="14" Height="14" Data="{StaticResource Icon.Pull}"/>
-                            <Label Content="{StaticResource Text.Pull}" Margin="2,0,0,0"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Pull}"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenPush" BorderThickness="0">
-                        <StackPanel Orientation="Horizontal" Margin="6,0">
+                    <Button Click="OpenPush" Margin="8,0" BorderThickness="0">
+                        <StackPanel Orientation="Horizontal">
                             <Path Width="14" Height="14" Data="{StaticResource Icon.Push}"/>
-                            <Label Content="{StaticResource Text.Push}" Margin="2,0,0,0"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Push}"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenStash" BorderThickness="0">
-                        <StackPanel Orientation="Horizontal" Margin="6,0">
+                    <Button Click="OpenStash" Margin="8,0" BorderThickness="0">
+                        <StackPanel Orientation="Horizontal">
                             <Path Width="14" Height="14" Data="{StaticResource Icon.SaveStash}"/>
-                            <Label Content="{StaticResource Text.Stash}" Margin="2,0,0,0"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Stash}"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenApply" BorderThickness="0">
-                        <StackPanel Orientation="Horizontal" Margin="6,0">
-                            <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icon.Apply}"/>
-                            <Label Content="{StaticResource Text.Apply}" Margin="2,0,0,0"/>
+                    <Button Click="OpenApply" Margin="8,0" BorderThickness="0">
+                        <StackPanel Orientation="Horizontal">
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Apply}"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Apply}"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Click="OpenSearch" Margin="4,0,0,0" BorderThickness="0" ToolTip="{StaticResource Text.Dashboard.Search.Tip}">
+                    <Button Click="OpenSearch" Margin="6,0" BorderThickness="0" ToolTip="{StaticResource Text.Dashboard.Search.Tip}">
                         <StackPanel Orientation="Horizontal">
-                            <Path Width="16" Height="16" Data="{StaticResource Icon.Search}"/>
-                            <Label Content="{StaticResource Text.Dashboard.Search}"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Search}"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Dashboard.Search}"/>
                         </StackPanel>
                     </Button>
-                    <Button Click="OpenConfigure" Margin="4,0,0,0" BorderThickness="0" ToolTip="{StaticResource Text.Dashboard.Configure.Tip}">
+                    <Button Click="OpenConfigure" Margin="6,0" BorderThickness="0" ToolTip="{StaticResource Text.Dashboard.Configure.Tip}">
                         <StackPanel Orientation="Horizontal">
-                            <Path Width="16" Height="16" Data="{StaticResource Icon.Setting}"/>
-                            <Label Content="{StaticResource Text.Configure}"/>
+                            <Path Width="14" Height="14" Data="{StaticResource Icon.Setting}"/>
+                            <TextBlock Margin="4,0" FontWeight="Bold" Text="{StaticResource Text.Configure}"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
