--- a/src/Views/Widgets/Histories.xaml
+++ b/src/Views/Widgets/Histories.xaml
@@ -77,7 +77,7 @@
                                                         </Border>
 
                                                         <Border x:Name="Color" Background="#FFFFB835">
-                                                            <TextBlock Text="{Binding Name}" FontSize="11" Margin="4,0" Foreground="Black"/>
+                                                            <TextBlock Text="{Binding Name}" FontSize="8pt" Margin="4,0" Foreground="Black"/>
                                                         </Border>
                                                     </StackPanel>
 
@@ -97,7 +97,7 @@
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
 
-                                        <TextBlock Text="{Binding Subject}" Margin="2,0,0,0"/>
+                                        <TextBlock Text="{Binding Subject}" FontFamily="Consolas,SimSun" FontSize="10pt" Margin="2,0,0,0"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -118,7 +118,7 @@
                         <DataGridTemplateColumn Width="Auto" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Committer.Name}" Margin="0,0,8,0"/>
+                                    <TextBlock Text="{Binding Committer.Name}" FontFamily="Consolas,SimSun" FontSize="10pt" Margin="0,0,8,0"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -126,15 +126,15 @@
                         <DataGridTemplateColumn Width="64" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding ShortSHA}"/>
+                                    <TextBlock Text="{Binding ShortSHA}" FontSize="10pt"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTemplateColumn Width="128" IsReadOnly="True">
+                        <DataGridTemplateColumn Width="140" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Committer.Time}"/>
+                                    <TextBlock Text="{Binding Committer.Time}" FontSize="10pt"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
